# ai_assistant

./: .dockerignore  .gitignore  AI-NOTICE  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  PENDING.md  PROMPT_MEJORAS.md  README.md  build.rs  docker-compose.yml  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: core_benchmarks.rs
docs/: AGENT_SYSTEM_DESIGN.md  API_REFERENCE.md  BENCHMARKS.md  CONCEPTS.md  DEPLOYMENT.md  EFFORT_ESTIMATION.md  GETTING_STARTED.md  GRAPH_RAG_GUIDE.md  GUIDE.md  GUI_FULL_WIRING_PLAN.md  IMPROVEMENTS.md  IMPROVEMENTS_V10.md  IMPROVEMENTS_V11.md  IMPROVEMENTS_V12.md  IMPROVEMENTS_V13.md  IMPROVEMENTS_V14.md  IMPROVEMENTS_V15.md  IMPROVEMENTS_V16.md  IMPROVEMENTS_V17.md  IMPROVEMENTS_V18.md  IMPROVEMENTS_V19.md  IMPROVEMENTS_V20.md  IMPROVEMENTS_V21.md  IMPROVEMENTS_V22.md  IMPROVEMENTS_V23.md  IMPROVEMENTS_V24.md  IMPROVEMENTS_V25.md  IMPROVEMENTS_V26.md  IMPROVEMENTS_V27.md  IMPROVEMENTS_V28.md  IMPROVEMENTS_V29.md  IMPROVEMENTS_V3.md  IMPROVEMENTS_V30.md  IMPROVEMENTS_V31.md  IMPROVEMENTS_V32.md  IMPROVEMENTS_V33.md  IMPROVEMENTS_V34.md  IMPROVEMENTS_V35.md  IMPROVEMENTS_V36.md  IMPROVEMENTS_V37.md  (+29 more)
docs/backups/: agent_visualization_2026-02-20_1430_pre-phase8-docs.html  agent_visualization_2026-02-21_0100_pre-phase11-docs.html  concepts_2026-03-06_v30_pre-new-concepts.html  feature_matrix_2026-02-19_0853_typical-usage.html  feature_matrix_2026-02-20_1800_pre-phase9-docs.html  feature_matrix_2026-02-21_0300_pre-v2phase1-docs.html  feature_matrix_2026-02-21_0500_pre-v2phase2-3-docs.html  feature_matrix_2026-02-21_1100_pre-v2phase3-4-completion.html  feature_matrix_2026-02-21_2300_pre-v3-speech-containers.html  feature_matrix_2026-02-22_2100_pre-v4.html  feature_matrix_2026-02-23_1200_pre-v5.html  feature_matrix_2026-02-23_1800_pre-v6.html  feature_matrix_2026-02-24_1030_pre-v9-update.html  feature_matrix_2026-02-24_2200_pre-v11-update.html  feature_matrix_2026-02-24_v8.html  feature_matrix_2026-02-25_1800_pre-v13-update.html  feature_matrix_2026-02-25_2300_pre-v12-update.html  feature_matrix_2026-02-26_v16.html  feature_matrix_2026-02-27_v17.html  feature_matrix_2026-02-27_v18.html  feature_matrix_2026-02-28_v19.html  feature_matrix_2026-03-04_v27_pre-routing-update.html  feature_matrix_2026-03-04_v28_pre-routing-enhancement.html  feature_matrix_2026-03-04_v29_pre-butler-advisor.html  feature_matrix_v19_20260226.html  feature_matrix_v20_20260226_pre-v15.html  framework_comparison_2026-02-20_1430_pre-phase8-docs.html  framework_comparison_2026-02-20_1800_pre-phase9-docs.html  framework_comparison_2026-02-20_2330_pre-phase10-update.html  framework_comparison_2026-02-21_0100_pre-phase11-docs.html  framework_comparison_2026-02-21_0300_pre-v2phase1-docs.html  framework_comparison_2026-02-21_0500_pre-v2phase2-3-docs.html  framework_comparison_2026-02-21_1100_pre-v2phase3-4-completion.html  framework_comparison_2026-02-23_1300_pre-v5.html  framework_comparison_2026-02-23_1800_pre-v6.html  framework_comparison_2026-02-24_1030_pre-v9-update.html  framework_comparison_2026-02-24_1500_pre-v8-update.html  framework_comparison_2026-02-24_2200_pre-v11-update.html  framework_comparison_2026-02-25_1800_pre-v13-update.html  framework_comparison_2026-02-25_2300_pre-v12-update.html  (+11 more)
docs/screenshots/: README.md
examples/: a2a_demo.rs  ab_testing_demo.rs  adapters_demo.rs  advanced_memory_demo.rs  advanced_streaming_demo.rs  agent_graph_demo.rs  analytics_demo.rs  autonomous_agent.rs  basic_chat.rs  bedrock_demo.rs  browser_demo.rs  butler_demo.rs  cloud_connectors_demo.rs  code_sandbox_demo.rs  constrained_demo.rs  container_sandbox.rs  cost_tracking.rs  dag_workflow.rs  devtools_demo.rs  distillation_demo.rs  distributed_agents_demo.rs  distributed_network_demo.rs  document_creation.rs  encrypted_knowledge.rs  eval_demo.rs  hitl_demo.rs  integrity_check_demo.rs  knowledge_graph.rs  mcp_server.rs  media_gen_demo.rs  multi_agent.rs  multimodal.rs  p2p_network.rs  prompt_signature_demo.rs  quality_tests.rs  rag_pipeline.rs  repl_demo.rs  scheduler_agent.rs  security_demo.rs  server_tls_demo.rs  (+11 more)
examples/clients/: csharp_chat.cs  curl_examples.sh  go_chat.go  java_chat.java  node_chat.mjs  openai_compat.py  python_chat.py
scripts/: build_protected.ps1  build_release.ps1
src/: a2a_protocol.rs  ab_testing.rs  access_control.rs  adaptive_thinking.rs  adaptive_timeout.rs  advanced_guardrails.rs  advanced_memory.rs  advanced_routing.rs  agent.rs  agent_definition.rs  agent_devtools.rs  agent_eval.rs  agent_graph.rs  agent_memory.rs  agent_policy.rs  agent_profiles.rs  agent_sandbox.rs  agent_wiring.rs  agentic_loop.rs  analysis.rs  answer_extraction.rs  anthropic_adapter.rs  api_key_rotation.rs  assistant.rs  async_provider_plugin.rs  async_providers.rs  async_support.rs  auto_indexing.rs  auto_model_selection.rs  autonomous_loop.rs  aws_auth.rs  batch.rs  benchmark.rs  binary_integrity.rs  browser_tools.rs  bulkhead.rs  butler.rs  cache_compression.rs  caching.rs  citations.rs  (+204 more)
src/advanced_memory/: consolidation.rs  entity.rs  episodic.rs  evolution.rs  extraction.rs  helpers.rs  manager.rs  mod.rs  persistence.rs  procedural.rs  scheduler.rs  search.rs  sharing.rs  temporal.rs  tests.rs
src/cluster/: crdt_persistence.rs  distributed_rate_limit.rs  health.rs  metrics.rs  mod.rs
src/document_parsing/: image_extraction.rs  mod.rs  ocr_engine.rs  ocr_pipeline.rs  parser.rs  tests.rs  types.rs  xml_helpers.rs
src/eval_suite/: ablation.rs  agent_config.rs  comparison.rs  config_search.rs  dataset.rs  feature_combos.rs  mod.rs  report.rs  runner.rs  scoring.rs  subtask.rs
src/mcp_protocol/: client.rs  knowledge_tools.rs  mod.rs  oauth.rs  server.rs  session.rs  tests.rs  transport.rs  types.rs  v2_annotations.rs  v2_batch.rs  v2_completion.rs  v2_elicitation.rs  v2_oauth.rs  v2_transport.rs
src/prompt_signature/: adapters.rs  assertions.rs  gepa.rs  judge.rs  miprov2.rs  mod.rs  optimizers.rs  reasoning.rs  (+4 more)
tests/: docker_integration_tests.rs  integration_tests.rs  rag_tier_tests.rs
(+5 files in other folders)
