[package]
name = "ai_assistant"
version = "0.1.0"
edition = "2021"
authors = ["Lander"]
description = "Reusable AI assistant library for local LLM integration (Ollama, LM Studio, etc.)"
license = "MIT OR Apache-2.0"

[features]
default = []
# Enable egui widgets for chat UI
egui-widgets = ["egui"]
# Enable RAG (Retrieval-Augmented Generation) support with SQLite FTS5
rag = ["rusqlite"]
# Enable document format parsing (EPUB, DOCX, ODT) via zip
document-formats = ["zip"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
regex = "1"
urlencoding = "2"

# Optional ZIP support for document parsing (EPUB, DOCX, ODT)
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

# Optional egui support for widgets
egui = { version = "0.27", optional = true }
# Optional SQLite for RAG storage
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = "3"
