[package]
name = "ai_assistant"
version = "0.1.0"
edition = "2021"
authors = ["Lander"]
description = "Reusable AI assistant library for local LLM integration (Ollama, LM Studio, etc.)"
license-file = "LICENSE"
repository = "https://github.com/lander/ai_assistant"
homepage = "https://github.com/lander/ai_assistant"
documentation = "https://docs.rs/ai_assistant"
readme = "README.md"
keywords = ["ai", "llm", "assistant", "rag", "agent"]
categories = ["science", "text-processing", "web-programming"]
exclude = [
    "docs/*.html",
    "docs/*.md",
    ".claude/",
    "target/",
    "PROMPT_MEJORAS.md",
]

[features]
# Default: full functionality (code has interdependencies)
# Use specific features for minimal builds after refactoring dependencies
default = ["full"]

# === Core Features (minimal) ===
# Basic assistant functionality with providers
core = []

# === Optional Feature Groups ===

# Multi-agent system: orchestration, shared memory, task decomposition
multi-agent = []

# Security features: guardrails, PII detection, content moderation, access control
security = []

# Analytics: metrics, telemetry, engagement tracking, conversation analytics
analytics = []

# Vision/Multimodal support
vision = []

# Local embeddings and vector database
embeddings = []

# Advanced streaming: SSE, WebSocket, compression
advanced-streaming = []

# External API adapters: OpenAI, Anthropic, HuggingFace
adapters = []

# Tool calling: MCP protocol, agentic loops, function calling
tools = []

# Document parsing: EPUB, DOCX, HTML, PDF, feeds, tables
documents = ["zip", "pdf-extract"]

# Evaluation and benchmarking: fine-tuning, metrics, A/B testing
eval = []

# Distributed computing: DHT, CRDTs, MapReduce (with parallel execution via rayon)
distributed = ["rayon"]

# Peer-to-peer networking: DHT discovery, NAT traversal, knowledge sharing
# Requires distributed for DHT support
p2p = ["distributed"]

# Real distributed networking: QUIC transport, consistent hashing, failure detection,
# Merkle sync, node security (mutual TLS), replication, LAN discovery.
# Not in 'full' by default due to heavy deps (quinn/rustls). Opt-in: --features distributed-network
distributed-network = ["distributed", "dep:quinn", "dep:rustls", "dep:rcgen", "dep:sha2", "dep:tokio", "dep:bincode"]

# RAG with SQLite FTS5 and encrypted knowledge packages
rag = ["rusqlite", "aes-gcm"]

# egui widgets for chat UI
egui-widgets = ["egui"]

# Full feature set (includes everything except egui)
full = [
    "core",
    "multi-agent",
    "security",
    "analytics",
    "vision",
    "embeddings",
    "advanced-streaming",
    "adapters",
    "tools",
    "documents",
    "eval",
    "rag",
    "distributed",
    "binary-storage",
    "async-runtime",
    "advanced-memory",
]

# Binary storage: bincode + gzip for internal data (faster, smaller than JSON)
binary-storage = ["dep:bincode"]

# Async runtime: tokio + reqwest for async HTTP operations
async-runtime = ["dep:tokio", "dep:reqwest"]

# LanceDB embedded vector database (Tier 2 — recommended upgrade from in-memory)
# Not in 'full' by default due to heavy deps. Opt-in: --features vector-lancedb
vector-lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:tokio", "dep:futures"]

# Binary integrity verification at startup (no runtime penalty after startup)
integrity-check = []

# WASM support: real web-sys/js-sys implementations for WASM targets.
# Only meaningful when compiling to wasm32. On native targets, this feature is a no-op.
wasm = ["dep:web-sys", "dep:js-sys", "dep:wasm-bindgen", "dep:getrandom"]

# Autonomous agent: policy, sandbox, OS tools, autonomous loop, profiles, user interaction,
# task board, interactive commands, mode manager
autonomous = []

# Scheduler: cron-like task scheduling + event-driven triggers
scheduler = ["autonomous"]

# Butler: environment auto-detection and configuration
butler = ["autonomous"]

# Browser automation: Chrome DevTools Protocol
browser = ["autonomous"]

# Distributed agents: run agents across distributed nodes (DHT, CRDTs, MapReduce)
distributed-agents = ["autonomous", "distributed-network"]

# AWS Bedrock provider: SigV4 authentication for Bedrock runtime API
aws-bedrock = ["dep:hmac"]

# pgvector: PostgreSQL vector database backend
# Note: actual postgres connectivity is via ureq REST or user-supplied connection.
# The postgres crate is heavy; this feature enables the pgvector SQL generation and types.
vector-pgvector = []

# OpenTelemetry integration: OTel-compatible tracing for AI operations
otel = []

# Code sandbox: isolated code execution for AI agents
code-sandbox = ["autonomous"]

# Cloud connectors: S3 and Google Drive storage integration
cloud-connectors = []

# Container execution: Docker-based sandboxed code execution and document generation
# Not in 'full' by default — requires Docker installed. Opt-in: --features containers
containers = ["dep:bollard", "dep:tokio", "dep:futures"]

# Audio/Speech: STT (speech-to-text) and TTS (text-to-speech) via cloud APIs
audio = []

# Event-driven workflow engine with checkpointing, time-travel, breakpoints
# Not in 'full' by default — requires tokio for async event loop. Opt-in: --features workflows
workflows = ["dep:tokio"]

# DSPy-style prompt optimization: signatures, bootstrap few-shot, metric search, self-reflect
# Not in 'full' by default — involves LLM calls for optimization. Opt-in: --features prompt-signatures
prompt-signatures = []

# Agent-to-Agent protocol (Google A2A): agent cards, task lifecycle, JSON-RPC 2.0
# Not in 'full' by default — requires tokio for async server. Opt-in: --features a2a
a2a = ["dep:tokio"]

# Advanced memory: episodic, procedural, entity memory with consolidation
advanced-memory = []

# Real-time voice agents: bidirectional audio streaming, VAD, interruption handling
# Not in 'full' by default — requires tokio for async streams. Opt-in: --features voice-agent
voice-agent = ["dep:tokio"]

# Media generation: image (DALL-E, SD, Flux) and video (Runway, Sora) generation
# Not in 'full' by default — involves external API calls. Opt-in: --features media-generation
media-generation = []

# Distillation pipeline: trajectory collection, scoring, dataset building, data flywheel
# Not in 'full' by default — involves LLM calls and storage. Opt-in: --features distillation
distillation = []

# Constrained decoding: grammar-guided generation for local models (GBNF, JSON Schema)
# Not in 'full' by default — only useful with local providers. Opt-in: --features constrained-decoding
constrained-decoding = []

# Human-in-the-Loop: tool approval gates, confidence escalation, corrections, policies
# Not in 'full' by default — adds workflow overhead. Opt-in: --features hitl
hitl = []

# WebRTC voice transport: real-time voice with SDP, ICE, RTP
# Not in 'full' by default — heavy networking. Opt-in: --features webrtc
webrtc = ["dep:tokio"]

# Agent DevTools: debugging, profiling, execution replay for agents
# Not in 'full' by default — development-only. Opt-in: --features devtools
devtools = []

# Local Whisper STT: offline speech-to-text via whisper.cpp bindings
# Not in 'full' by default — heavy native C++ dep. Opt-in: --features whisper-local
whisper-local = ["dep:whisper-rs", "audio"]

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
regex = "1"
urlencoding = "2"

# Optional ZIP support for document parsing (EPUB, DOCX, ODT)
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

# Optional PDF support for document parsing
pdf-extract = { version = "0.7", optional = true }

# Optional egui support for widgets
egui = { version = "0.27", optional = true }
# Optional SQLite for RAG storage
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
# Optional AES-GCM for encrypted knowledge packages
aes-gcm = { version = "0.10", optional = true }
# Optional bincode for binary internal storage (faster than JSON)
bincode = { version = "1", optional = true }
# Optional async runtime for async HTTP operations
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"], optional = true }
# Optional reqwest for async HTTP client (also supports blocking)
reqwest = { version = "0.12", features = ["json", "blocking", "stream"], optional = true }
# Optional rayon for parallel MapReduce execution
rayon = { version = "1", optional = true }
# Optional QUIC transport for distributed networking
quinn = { version = "0.11", optional = true }
# Optional TLS for distributed networking (required by quinn)
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
# Optional certificate generation for node identity
rcgen = { version = "0.13", optional = true }
# Optional SHA-256 for Merkle tree hashing
sha2 = { version = "0.10", optional = true }
# Optional LanceDB for embedded vector database (Tier 2)
lancedb = { version = "0.26", optional = true, default-features = false }
# Optional Arrow for LanceDB data interchange (version must match lancedb's arrow dep)
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
# Optional futures for async stream collection (LanceDB queries)
futures = { version = "0.3", optional = true }
# Optional HMAC for AWS SigV4 authentication (Bedrock, S3)
hmac = { version = "0.12", optional = true }
# Optional WASM support via web-sys/js-sys (only useful on wasm32 targets)
web-sys = { version = "0.3", features = ["console", "Window"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
# Optional Docker API client for container-based execution
bollard = { version = "0.18", optional = true, default-features = false, features = ["ssl", "time"] }
# Optional whisper.cpp bindings for local STT (heavy native dep, links to C++)
whisper-rs = { version = "0.15", optional = true }

[[bin]]
name = "ai_test_harness"
path = "src/bin/ai_test_harness.rs"

[[bin]]
name = "kpkg_tool"
path = "src/bin/kpkg_tool.rs"
required-features = ["rag"]

[[bin]]
name = "ai_assistant_cli"
path = "src/bin/ai_assistant_cli.rs"

[[example]]
name = "autonomous_agent"
required-features = ["autonomous"]

[[example]]
name = "encrypted_knowledge"
required-features = ["rag"]

[[example]]
name = "knowledge_graph"
required-features = ["rag"]

[[example]]
name = "mcp_server"
required-features = ["tools"]

[[example]]
name = "multi_agent"
required-features = ["multi-agent"]

[[example]]
name = "p2p_network"
required-features = ["p2p"]

[[example]]
name = "rag_pipeline"
required-features = ["rag"]

[[example]]
name = "scheduler_agent"
required-features = ["scheduler"]

[[example]]
name = "vector_search"
required-features = ["embeddings"]

[[example]]
name = "repl_demo"
required-features = ["full"]

[[example]]
name = "ab_testing_demo"
required-features = ["full"]

[[example]]
name = "cost_tracking"
required-features = ["full"]

[[example]]
name = "multimodal"
required-features = ["full"]

[[example]]
name = "ui_hooks_demo"

[[example]]
name = "agent_graph_demo"

[[example]]
name = "basic_chat"

[[example]]
name = "dag_workflow"

[[example]]
name = "quality_tests"

[[example]]
name = "streaming"

[[example]]
name = "container_sandbox"
required-features = ["containers"]

[[example]]
name = "document_creation"
required-features = ["containers"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_benchmarks"
harness = false

# === Release profile optimizations ===
[profile.release]
# Enable Link-Time Optimization for better dead code elimination
lto = true
# Single codegen unit for maximum optimization
codegen-units = 1
# Optimize for size with good performance
opt-level = "z"
# Strip symbols from binary
strip = true
# Abort on panic (smaller binary, no unwinding)
panic = "abort"

[profile.release-fast]
inherits = "release"
# Optimize for speed instead of size
opt-level = 3
# Keep panic unwinding for better debugging
panic = "unwind"

# === Protected release profile (anti-reverse engineering) ===
[profile.release-protected]
inherits = "release"
# Fat LTO for maximum optimization and code merging (harder to analyze)
lto = "fat"
# Single codegen unit merges all code (harder to identify module boundaries)
codegen-units = 1
# Size optimization also obscures code patterns
opt-level = "z"
# Strip all symbols and debug info
strip = "symbols"
# No panic messages or unwinding (less string leakage)
panic = "abort"
# Overflow checks disabled in release (smaller, faster)
overflow-checks = false

# Metadata for downstream crates and build scripts
[package.metadata.protected-build]
# Post-build steps for maximum protection
upx_enabled = true
upx_flags = ["--best", "--lzma"]
sign_binary = true
verify_at_startup = true
